@@ -28,27 +28,33 @@ public class BaseHeadDatabase implements HeadDatabase {
     private static final Logger LOGGER = LoggerFactory.getLogger(BaseHeadDatabase.class);
 
     private static final Gson GSON = new GsonBuilder().registerTypeAdapter(Head.class, new HeadMapper()).create();
-    private static final String DEFAULT_SOURCE_URL = "https://raw.githubusercontent.com/TheSilentPro/heads/refs/heads/main/heads.json";
+    private static final String DEFAULT_SOURCE_URL = "https://raw.githubusercontent.com/BitworksMC/HeadDB/refs/heads/master/heads.json";
+    private static final int CONNECT_TIMEOUT_MILLIS = 10_000;
+    private static final int READ_TIMEOUT_MILLIS = 30_000;
     private final Executor executor;
     private final List<String> sourceUrls;
+    private final EnumSet<Index> indexes;
+    private final Object updateLock = new Object();
 
-    // Non-indexed
-    private volatile List<Head> heads = null;
-
-    // Indexed
-    private volatile Map<Integer, Head> byId = null;
-    private volatile Map<String, Head> byTexture = null;
-    private volatile Map<String, List<Head>> byCategory = null;
-    private volatile Map<String, List<Head>> byTag = null;
-    private final Index[] indexes;
+    /**
+     * A complete, immutable database view. Publishing one object prevents readers from
+     * observing heads from one update alongside indexes from another update.
+     */
+    private volatile Snapshot snapshot;
 
     // track the latest load
     private volatile CompletableFuture<List<Head>> lastUpdateFuture;
 
     public BaseHeadDatabase(@Nullable Executor executor, @Nullable List<String> sourceUrls, @Nullable Index... indexes) {
-        this.executor = executor != null ? executor : Executors.newSingleThreadExecutor(r -> new Thread(r, "Head Database Worker"));
+        this.executor = executor != null ? executor : Executors.newSingleThreadExecutor(r -> {
+            Thread thread = new Thread(r, "Head Database Worker");
+            thread.setDaemon(true);
+            return thread;
+        });
         this.sourceUrls = normalizeSourceUrls(sourceUrls);
-        this.indexes = indexes;
+        this.indexes = indexes == null || indexes.length == 0
+                ? EnumSet.noneOf(Index.class)
+                : EnumSet.copyOf(Arrays.asList(indexes));
     }
 
     public BaseHeadDatabase(@Nullable Executor executor, @Nullable Index... indexes) {
@@ -69,52 +75,54 @@ public class BaseHeadDatabase implements HeadDatabase {
 
     @Override
     public CompletableFuture<List<Head>> update() {
-        if (lastUpdateFuture != null && !lastUpdateFuture.isDone()) {
+        synchronized (updateLock) {
+            CompletableFuture<List<Head>> currentUpdate = lastUpdateFuture;
+            if (currentUpdate != null && !currentUpdate.isDone()) {
+                return currentUpdate;
+            }
+
+            lastUpdateFuture = CompletableFuture.supplyAsync(this::loadSnapshot, executor);
             return lastUpdateFuture;
         }
-
-        lastUpdateFuture = CompletableFuture.supplyAsync(() -> {
-            LOGGER.debug("Fetching heads...");
-            long start = System.currentTimeMillis();
-            Exception lastException = null;
-
-            for (String sourceUrl : sourceUrls) {
-                try {
-                    List<Head> loadedHeads = fetchHeads(sourceUrl);
-                    if (loadedHeads == null) {
-                        continue;
-                    }
-
-                    this.heads = loadedHeads;
-                    rebuildIndexes();
-
-                    long elapsed = System.currentTimeMillis() - start;
-                    LOGGER.debug("Update took {} seconds ({}ms total)", TimeUnit.MILLISECONDS.toSeconds(elapsed), elapsed);
-                    return Collections.unmodifiableList(this.heads);
-                } catch (IOException | IllegalArgumentException ex) {
-                    lastException = ex;
-                    LOGGER.warn("Failed to fetch heads from '{}': {}", sourceUrl, ex.getMessage());
-                    LOGGER.debug("Detailed error while fetching heads from '{}'", sourceUrl, ex);
-                }
-            }
-
-            if (lastException != null) {
-                LOGGER.error("Failed to update heads from all configured sources.");
-                throw new CompletionException("Failed to update heads", lastException);
-            }
-
-            LOGGER.error("Failed to update heads from all configured sources.");
-            return Collections.emptyList();
-        }, executor);
-
-        return lastUpdateFuture;
     }
 
-    private @Nullable List<Head> fetchHeads(String sourceUrl) throws IOException {
+    private List<Head> loadSnapshot() {
+        LOGGER.debug("Fetching heads...");
+        long start = System.currentTimeMillis();
+        Exception lastException = null;
+
+        for (String sourceUrl : sourceUrls) {
+            try {
+                List<Head> loadedHeads = fetchHeads(sourceUrl);
+                Snapshot loadedSnapshot = buildSnapshot(loadedHeads);
+                this.snapshot = loadedSnapshot;
+
+                long elapsed = System.currentTimeMillis() - start;
+                LOGGER.debug("Update took {} seconds ({}ms total)", TimeUnit.MILLISECONDS.toSeconds(elapsed), elapsed);
+                return loadedSnapshot.heads();
+            } catch (IOException | RuntimeException ex) {
+                lastException = ex;
+                LOGGER.warn("Failed to load heads from '{}': {}", sourceUrl, ex.getMessage());
+                LOGGER.debug("Detailed error while loading heads from '{}'", sourceUrl, ex);
+            }
+        }
+
+        LOGGER.error("Failed to update heads from all configured sources; keeping the previous database snapshot.");
+        throw new CompletionException("Failed to update heads from all configured sources", lastException);
+    }
+
+    private List<Head> fetchHeads(String sourceUrl) throws IOException {
         URL url = URI.create(sourceUrl).toURL();
-        HttpURLConnection request = (HttpURLConnection) url.openConnection();
+        if (!(url.openConnection() instanceof HttpURLConnection request)) {
+            throw new IOException("Unsupported database URL protocol: " + url.getProtocol());
+        }
+
         request.setRequestProperty("Accept", "application/json");
         request.setRequestProperty("Accept-Encoding", "gzip");
+        request.setRequestProperty("User-Agent", "HeadDB");
+        request.setConnectTimeout(CONNECT_TIMEOUT_MILLIS);
+        request.setReadTimeout(READ_TIMEOUT_MILLIS);
+        request.setInstanceFollowRedirects(true);
 
         try {
             long connectStart = System.currentTimeMillis();
@@ -124,8 +132,7 @@ public class BaseHeadDatabase implements HeadDatabase {
             LOGGER.debug("Connected to '{}' in {}ms (Response code: {})", sourceUrl, connectTime, responseCode);
 
             if (responseCode != HttpURLConnection.HTTP_OK) {
-                LOGGER.error("Failed to fetch data from '{}'. HTTP Response Code: {}", sourceUrl, responseCode);
-                return null;
+                throw new IOException("HTTP response code " + responseCode);
             }
 
             long readStart = System.currentTimeMillis();
@@ -133,7 +140,7 @@ public class BaseHeadDatabase implements HeadDatabase {
             int lineCount = 0;
 
             try (InputStream raw = request.getInputStream();
-                 InputStream in = "gzip".equalsIgnoreCase(request.getContentEncoding()) ? new GZIPInputStream(raw) : raw;
+                 InputStream in = isGzipEncoded(request.getContentEncoding()) ? new GZIPInputStream(raw) : raw;
                  BufferedReader reader = new BufferedReader(new InputStreamReader(in, StandardCharsets.UTF_8), 8192)) {
                 String line;
                 while ((line = reader.readLine()) != null) {
@@ -146,17 +153,10 @@ public class BaseHeadDatabase implements HeadDatabase {
             LOGGER.debug("Finished reading {} lines from '{}' in {}ms", lineCount, sourceUrl, readTime);
 
             long parseStart = System.currentTimeMillis();
-            List<Head> fetchedHeads;
-            try {
-                fetchedHeads = GSON.fromJson(rawData.toString(), HeadMapper.HEADS_LIST_TYPE);
-            } catch (Exception ex) {
-                LOGGER.error("Failed to parse fetched JSON from '{}'!", sourceUrl, ex);
-                return null;
-            }
+            List<Head> fetchedHeads = GSON.fromJson(rawData.toString(), HeadMapper.HEADS_LIST_TYPE);
 
-            if (fetchedHeads == null) {
-                LOGGER.error("Source '{}' returned an empty payload.", sourceUrl);
-                return null;
+            if (fetchedHeads == null || fetchedHeads.isEmpty()) {
+                throw new IOException("Database payload was empty");
             }
 
             long parseTime = System.currentTimeMillis() - parseStart;
@@ -167,53 +167,81 @@ public class BaseHeadDatabase implements HeadDatabase {
         }
     }
 
-    private void rebuildIndexes() {
-        if (indexes == null) {
-            return;
-        }
-
+    private Snapshot buildSnapshot(List<Head> loadedHeads) {
         LOGGER.debug("Indexing heads...");
         long indexStart = System.currentTimeMillis();
 
-        if (hasIndex(Index.ID)) {
-            this.byId = this.heads.stream().collect(Collectors.toMap(Head::getId, h -> h));
-            LOGGER.debug("Index by ID completed");
-        }
+        List<Head> heads = List.copyOf(loadedHeads);
+        Map<Integer, Head> byId = hasIndex(Index.ID) ? new HashMap<>() : null;
+        Map<String, Head> byTexture = hasIndex(Index.TEXTURE) ? new HashMap<>() : null;
+        Map<String, List<Head>> byCategory = hasIndex(Index.CATEGORY) ? new HashMap<>() : null;
+        Map<String, List<Head>> byTag = hasIndex(Index.TAG) ? new HashMap<>() : null;
 
-        if (hasIndex(Index.TEXTURE)) {
-            this.byTexture = this.heads.stream().collect(Collectors.toMap(Head::getTexture, h -> h));
-            LOGGER.debug("Index by Texture completed");
-        }
+        for (Head head : heads) {
+            validateHead(head);
 
-        if (hasIndex(Index.CATEGORY)) {
-            Map<String, List<Head>> rawCat = this.heads.stream().collect(Collectors.groupingBy(Head::getCategory));
-            this.byCategory = rawCat.entrySet().stream()
-                    .collect(Collectors.toMap(
-                            Map.Entry::getKey,
-                            e -> Collections.unmodifiableList(e.getValue())
-                    ));
-            LOGGER.debug("Index by Category completed");
-        }
-
-        if (hasIndex(Index.TAG)) {
-            Map<String, List<Head>> tagBuilder = new HashMap<>();
-            for (Head head : this.heads) {
+            if (byId != null && byId.putIfAbsent(head.getId(), head) != null) {
+                throw new IllegalArgumentException("Duplicate head ID: " + head.getId());
+            }
+            if (byTexture != null && byTexture.putIfAbsent(head.getTexture(), head) != null) {
+                throw new IllegalArgumentException("Duplicate head texture: " + head.getTexture());
+            }
+            if (byCategory != null) {
+                byCategory.computeIfAbsent(head.getCategory(), ignored -> new ArrayList<>()).add(head);
+            }
+            if (byTag != null) {
                 for (String tag : head.getTags()) {
-                    tagBuilder
-                            .computeIfAbsent(tag, k -> new ArrayList<>())
-                            .add(head);
+                    byTag.computeIfAbsent(tag, ignored -> new ArrayList<>()).add(head);
                 }
             }
-            this.byTag = tagBuilder.entrySet().stream()
-                    .collect(Collectors.toMap(
-                            Map.Entry::getKey,
-                            e -> Collections.unmodifiableList(e.getValue())
-                    ));
-            LOGGER.debug("Index by Tag completed");
         }
 
         long indexTime = System.currentTimeMillis() - indexStart;
         LOGGER.debug("Indexing completed in {}ms", indexTime);
+        return new Snapshot(
+                heads,
+                immutableMap(byId),
+                immutableMap(byTexture),
+                immutableListMap(byCategory),
+                immutableListMap(byTag)
+        );
+    }
+
+    private static void validateHead(Head head) {
+        Objects.requireNonNull(head, "Database contains a null head");
+        if (head.getName() == null || head.getName().isBlank()) {
+            throw new IllegalArgumentException("Head " + head.getId() + " has no name");
+        }
+        if (head.getTexture() == null || head.getTexture().isBlank()) {
+            throw new IllegalArgumentException("Head " + head.getId() + " has no texture");
+        }
+        if (head.getCategory() == null || head.getCategory().isBlank()) {
+            throw new IllegalArgumentException("Head " + head.getId() + " has no category");
+        }
+        if (head.getTags() == null || head.getTags().stream().anyMatch(Objects::isNull)) {
+            throw new IllegalArgumentException("Head " + head.getId() + " has invalid tags");
+        }
+    }
+
+    private static boolean isGzipEncoded(@Nullable String contentEncoding) {
+        return contentEncoding != null
+                && Arrays.stream(contentEncoding.split(","))
+                .map(String::trim)
+                .anyMatch("gzip"::equalsIgnoreCase);
+    }
+
+    private static <K, V> @Nullable Map<K, V> immutableMap(@Nullable Map<K, V> source) {
+        return source == null ? null : Map.copyOf(source);
+    }
+
+    private static <K, V> @Nullable Map<K, List<V>> immutableListMap(@Nullable Map<K, List<V>> source) {
+        if (source == null) {
+            return null;
+        }
+
+        Map<K, List<V>> result = new HashMap<>();
+        source.forEach((key, values) -> result.put(key, List.copyOf(values)));
+        return Map.copyOf(result);
     }
 
     private static List<String> normalizeSourceUrls(@Nullable List<String> sourceUrls) {
@@ -241,98 +269,93 @@ public class BaseHeadDatabase implements HeadDatabase {
     }
 
 
-    // ... rest of class unchanged ...
-
     /**
      * Blocks until the most recent update() completes (success or failure),
      * then returns true if it succeeded, or false if it failed.
      */
     @Override
     public boolean awaitReady() {
+        CompletableFuture<List<Head>> update = lastUpdateFuture;
+        if (update == null) {
+            return false;
+        }
         try {
-            lastUpdateFuture.join();
+            update.join();
             return true;
-        } catch (CompletionException ignored) {
+        } catch (CancellationException | CompletionException ignored) {
             return false;
         }
     }
 
     /**
-     * Non-blocking check: has the most recent update() finished (successfully or not)?
+     * Non-blocking check for whether a successful, usable snapshot is available.
      */
     @Override
     public boolean isReady() {
-        return lastUpdateFuture != null
-                && lastUpdateFuture.isDone()
-                && !lastUpdateFuture.isCompletedExceptionally()
-                && !lastUpdateFuture.isCancelled();
+        return snapshot != null;
     }
 
     @Override
     public CompletableFuture<List<Head>> onReady() {
-        return Objects.requireNonNullElseGet(lastUpdateFuture, CompletableFuture::new);
+        Snapshot current = snapshot;
+        if (current != null) {
+            return CompletableFuture.completedFuture(current.heads());
+        }
+
+        CompletableFuture<List<Head>> update = lastUpdateFuture;
+        return update != null ? update : update();
     }
 
     @Override
     @Nullable
     public List<Head> getHeads() {
-        if (!isReady()) {
-            return Collections.emptyList();
-        }
-        if (this.heads == null) {
-            return null;
-        }
-        return Collections.unmodifiableList(this.heads);
+        Snapshot current = snapshot;
+        return current == null ? null : current.heads();
     }
 
     @Override
     @NotNull
     public List<Head> getByCategory(String category) {
-        if (!isReady()) {
+        Snapshot current = snapshot;
+        if (current == null || category == null) {
             return Collections.emptyList();
         }
-        if (byCategory != null) {
-            return byCategory.getOrDefault(category, Collections.emptyList());
-        }
-        if (heads == null) {
-            return Collections.emptyList();
+        if (current.byCategory() != null) {
+            return current.byCategory().getOrDefault(category, Collections.emptyList());
         }
 
         List<Head> result = new ArrayList<>();
-        for (Head head : heads) {
+        for (Head head : current.heads()) {
             if (category.equals(head.getCategory())) {
                 result.add(head);
             }
         }
-        return result;
+        return List.copyOf(result);
     }
 
     @Override
     @NotNull
     public List<Head> getByTags(String... tags) {
-        if (!isReady()) {
+        Snapshot current = snapshot;
+        if (current == null) {
             return Collections.emptyList();
         }
         if (tags == null || tags.length == 0) {
             return Collections.emptyList();
         }
 
-        if (byTag != null) {
+        if (current.byTag() != null) {
             Set<Head> resultSet = new LinkedHashSet<>();
             for (String t : tags) {
                 if (t != null) {
-                    resultSet.addAll(byTag.getOrDefault(t, Collections.emptyList()));
+                    resultSet.addAll(current.byTag().getOrDefault(t, Collections.emptyList()));
                 }
             }
-            return new ArrayList<>(resultSet);
-        }
-
-        if (heads == null) {
-            return Collections.emptyList();
+            return List.copyOf(resultSet);
         }
         Set<String> tagSet = Arrays.stream(tags).filter(Objects::nonNull).collect(Collectors.toSet());
         List<Head> result = new ArrayList<>();
-        for (Head head : heads) {
+        for (Head head : current.heads()) {
             for (String hTag : head.getTags()) {
                 if (tagSet.contains(hTag)) {
                     result.add(head);
@@ -340,22 +363,20 @@ public class BaseHeadDatabase implements HeadDatabase {
                 }
             }
         }
-        return result;
+        return List.copyOf(result);
     }
 
     @Override
     @Nullable
     public Head getById(int id) {
-        if (!isReady()) {
+        Snapshot current = snapshot;
+        if (current == null) {
             return null;
         }
-        if (byId != null) {
-            return byId.get(id);
+        if (current.byId() != null) {
+            return current.byId().get(id);
         }
-        if (heads == null) {
-            return null;
-        }
-        for (Head head : heads) {
+        for (Head head : current.heads()) {
             if (head.getId() == id) {
                 return head;
             }
@@ -366,16 +387,14 @@ public class BaseHeadDatabase implements HeadDatabase {
     @Override
     @Nullable
     public Head getByTexture(String texture) {
-        if (!isReady()) {
+        Snapshot current = snapshot;
+        if (current == null || texture == null) {
             return null;
         }
-        if (byTexture != null) {
-            return byTexture.get(texture);
+        if (current.byTexture() != null) {
+            return current.byTexture().get(texture);
         }
-        if (heads == null) {
-            return null;
-        }
-        for (Head head : heads) {
+        for (Head head : current.heads()) {
             if (head.getTexture().equals(texture)) {
                 return head;
             }
@@ -384,14 +403,15 @@ public class BaseHeadDatabase implements HeadDatabase {
     }
 
     private boolean hasIndex(Index index) {
-        if (indexes == null) {
-            return false;
-        }
-        for (Index i : indexes) {
-            if (i == index) {
-                return true;
-            }
-        }
-        return false;
+        return indexes.contains(index);
+    }
+
+    private record Snapshot(
+            List<Head> heads,
+            @Nullable Map<Integer, Head> byId,
+            @Nullable Map<String, Head> byTexture,
+            @Nullable Map<String, List<Head>> byCategory,
+            @Nullable Map<String, List<Head>> byTag
+    ) {
     }
 }
